# wooting-analog-plugin

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile.toml  README.md
ci/: before_deploy.sh  script.sh
etc/: wooting-analog-plugin.csh  wooting-analog-plugin.sh
src/: lib.rs
wix/: main.wxs
