[package]
name = "wooting-analog-plugin"
version = "0.1.0"
authors = ["simon-wh <simon@wooting.io>"]
edition = "2018"

[dependencies]
log = "0.4.7"
wooting-analog-sdk-common = { path = "analog-sdk/wooting-analog-sdk-common"}
hidapi = { version = "0.5.2", features = ["linux-static-hidraw"], default-features = false }
env_logger = "0.6.2"
objekt = "0.1.2"

[lib]
crate-type = ["cdylib"]